# otel-poc

./: .env  README.md  pyproject.toml  requirements.txt
app/: __main__.py  app.py
app/routes/: health.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
docker/etc/: nginx.conf  otel-collector-config.yml  prometheus.yml
